--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^17.0.2",
     "react-dadata": "^2.9.3",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.12.2",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-step-progress-bar": "^1.0.3",
